// file: pkg/queue/proto/requests/publish_request.proto
// version: 1.0.0
// guid: 59dc8120-bc2f-4d56-a9f1-f0957cb9bafb

// PublishRequest publishes a single message to a named topic. It is
// used for pub/sub style messaging where consumers subscribe to
// topics rather than specific queues.
edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "pkg/common/proto/messages/request_metadata.proto";
import "pkg/common/proto/messages/error.proto";
import "pkg/queue/proto/messages/queue_message.proto";
import "pkg/queue/proto/messages/delivery_options.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";
option features.(pb.go).api_level = API_HYBRID;

// PublishRequest contains all information required to publish a
// message to a topic.
message PublishRequest {
  // Name of the topic to publish to.
  string topic_name = 1;

  // Message to publish.
  QueueMessage message = 2;

  // Optional delivery parameters controlling retries and delays.
  DeliveryOptions delivery_options = 3;

  // Standard request metadata for tracing and auth.
  gcommon.v1.common.RequestMetadata metadata = 4;
}
