// file: proto/gcommon/v1/queue/publish_response.proto
// version: 1.0.0
// guid: 8b12b279-f7c6-40fe-9147-4a663fb0c9c6

// PublishResponse reports the outcome of publishing a message to a
// topic.
edition = "2023";

package gcommon.v1.queue;

import "gcommon/v1/common/error.proto";
import "gcommon/v1/common/request_metadata.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/queue";

// PublishResponse contains the identifier of the published message
// and success status.
message PublishResponse {
  // Unique identifier of the message as stored by the broker.
  string message_id = 1;

  // Whether the publish operation succeeded.
  bool success = 2;

  // Error information when success is false.
  gcommon.v1.common.Error error = 3;

  // Request metadata echoed back for tracing.
  gcommon.v1.common.RequestMetadata request_metadata = 4;
}
